@@ -1,6 +1,7 @@
 Revision history for Log-Log4perl-Filter-CallerMatch
 
 {{$NEXT}}
+    Now works with Log::Log4perl::Filter::Boolean
     Improved tests
 
 1.100830  2010-03-24 14:48:48 EST5EDT
